[package]
name = "near-jsonrpc-adversarial-primitives"
version = "0.2.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
publish = false
edition = "2018"

[dependencies]
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
near-primitives = { path = "../../core/primitives" }

near-jsonrpc-primitives = { path = "../jsonrpc-primitives", optional = true }
near-network = { path = "../network" }


[features]
serde = [
  "serde_json",
  "serde_crate",
  "near-jsonrpc-primitives",
  "near-network/adversarial"
]
